--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -2,12 +2,18 @@
 
 FROM ubuntu:14.04
 
-RUN sudo apt-get update \
-sudo apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs \
+RUN apt-get update -qq && apt-get install -qqy \
+    apt-transport-https \
+    ca-certificates \
+    curl \
+    lxc \
+    iptables
+    
+RUN sudo apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs \
 sudo apt-get upgrade -y \
 echo "vm.max_map_count=262144" | sudo tee -a /etc/sysctl.conf 
 
-RUN sudo apt-get -y install apt-transport-https ca-certificates curl
+#RUN sudo apt-get -y install apt-transport-https ca-certificates curl
 
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
 
