--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM ubuntu:14.04
 
-RUN apt-get update -qq && apt-get install -qqy \
+RUN apt-get update  && apt-get install -y \
     apt-transport-https \
     ca-certificates \
     curl \
