Removed unnecessary sudos

--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -10,18 +10,16 @@ RUN apt-get update  && apt-get install -y \
     iptables \
     software-properties-common
     
-RUN sudo apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs \
-sudo apt-get upgrade -y \
-echo "vm.max_map_count=262144" | sudo tee -a /etc/sysctl.conf 
+RUN  apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs \
+ apt-get upgrade -y \
+echo "vm.max_map_count=262144" |  tee -a /etc/sysctl.conf 
 
-#RUN sudo apt-get -y install apt-transport-https ca-certificates curl
+RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
 
-RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-
-RUN sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" 
+RUN  add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" 
        
-RUN sudo apt-get update \ 
-sudo apt-get install docker-ce
+RUN  apt-get update
+RUN apt-get install docker-ce
 
 
 EXPOSE 22 80 443 7000 12375 12300 12343 12400 12443 8764 9200 9300 22191 12191 2112 18000 
