added ssh install

--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -9,8 +9,7 @@ RUN apt-get update  && apt-get install -y \
     lxc \
     iptables \
     software-properties-common \
-    openssh-server \
-    openssh-clients
+    openssh-server 
     
 RUN  apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs \
  apt-get upgrade -y \
