Added memory to container

--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -12,8 +12,8 @@ RUN apt-get update  && apt-get install -y \
     openssh-server 
     
 RUN  apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs \
- apt-get upgrade -y \
-echo "vm.max_map_count=262144" |  tee -a /etc/sysctl.conf 
+ apt-get upgrade -y 
+RUN echo "vm.max_map_count=262144" |  tee -a /etc/sysctl.conf 
 
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
 
@@ -26,5 +26,5 @@ RUN useradd -m -p password -s /bin/bash ubuntu
 RUN usermod -aG sudo ubuntu
 
 
-EXPOSE 22 80 443 7000 12375 12300 12343 12400 12443 8764 9200 9300 22191 12191 2112 18000 
+EXPOSE 22 80 443 7000 12375 12300 12343 12400 12443 8764 9200 9300 22191 12191 2112 18000 20000
  
