Added memory to container

--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -8,11 +8,10 @@ RUN apt-get update  && apt-get install -y \
     curl \
     lxc \
     iptables \
-    software-properties-common \
-    openssh-server 
+    software-properties-common 
     
-RUN  apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs \
- apt-get upgrade -y 
+RUN  apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs 
+RUN apt-get upgrade -y 
 RUN echo "vm.max_map_count=262144" |  tee -a /etc/sysctl.conf 
 
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
