--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -10,8 +10,8 @@ RUN apt-get update  && apt-get install -y \
     iptables \
     software-properties-common 
     
-RUN  apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual  \
- apt-get upgrade -y
+RUN  apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual 
+RUN apt-get upgrade -y
 RUN echo "vm.max_map_count=262144" |  tee -a /etc/sysctl.conf 
 
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
