added back xfsprogs

--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -7,13 +7,13 @@ RUN apt-get update  && apt-get install -y \
     ca-certificates \
     curl \
     lxc \
-    iptables \
-    software-properties-common 
+    iptables  
     
 RUN  apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs &&  apt-get upgrade -y && echo "vm.max_map_count=262144" |  tee -a /etc/sysctl.conf 
 
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
 
+RUN apt-get install -y software-properties-common
 RUN  add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" 
        
 RUN  apt-get update && apt-get install -y docker-ce
