--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update  && apt-get install -y \
     
 #RUN  apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs &&  apt-get upgrade -y && 
 
-RUN echo "vm.max_map_count=262144" |  tee -a /etc/sysctl.conf 
+#RUN echo "vm.max_map_count=262144" |  tee -a /etc/sysctl.conf 
 
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
 
@@ -20,9 +20,10 @@ RUN  add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubun
        
 RUN  apt-get update && apt-get install -y docker-ce
 
-#RUN useradd -m -p password -s /bin/bash ubuntu
-#RUN usermod -aG sudo ubuntu
-
+RUN mkdir /root/scripts && mkdir /root/start-scripts
+ADD scripts/ /root/scripts/
+ADD start-scripts/ /root/start-scripts/
 
 EXPOSE 22 80 443 7000 12375 12300 12343 12400 12443 8764 9200 9300 22191 12191 2112 18000 20000
  
+ENTRYPOINT ["/root/scripts/startup.sh"] 
