--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -26,4 +26,4 @@ ADD start-scripts/ /root/start-scripts/
 
 EXPOSE 22 80 443 7000 12375 12300 12343 12400 12443 8764 9200 9300 22191 12191 2112 18000 20000
  
-ENTRYPOINT ["/root/scripts/startup.sh"] 
+#ENTRYPOINT ["/root/scripts/startup.sh"] 
