--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update  && apt-get install -y \
     ca-certificates \
     curl \
     lxc \
-    iptables  
+    iptables \
+    openssh-server
     
 #RUN  apt-get install -y linux-image-extra-$(uname -r) linux-image-extra-virtual xfsprogs &&  apt-get upgrade -y && 
 
